packages/components/src/FilterBar/FilterBar.scss
// Filter styles
$tc-filter-bar-highlight-color: #f6e5bb !default;
$tc-filter-bar-width: 250px !default;

.filter {
	display: flex;
	height: $padding-larger;
	background-color: rgba($silver, 0.2);
	color: $dove-gray;
	align-items: top;
	padding: 0;
	border-radius: $border-radius-base;

	.search-icon {
		margin: $padding-small;
		margin-right: $padding-smaller;
		margin-top: 7px;
	}

	> :global(.form-group) {
		margin-bottom: 0;
		display: flex;
		flex-grow: 1;
	}

	:global(.form-group.form-group) {
		padding: 0;
		background: none;
	}

	.animate {
		width: $tc-filter-bar-width;
		animation: reveal 1s cubic-bezier(0.4, 0, 0.2, 1);
	}

	.search {
		box-shadow: none;
		color: $dove-gray;
		font-size: $font-size-base;
		margin: 0 $padding-small;

		&::placeholder {
			color: $dark-silver;
		}

		// sass-lint:disable-next-line no-vendor-prefixes
		&::-ms-clear {
			display: none;
		}
	}

	.remove {
		display: inline-block;
		color: opacify($gray, 0.2);
		padding: $padding-smaller 0;
		line-height: 2rem;
		margin-left: -(2 * $padding-small); // small + btn svg margin

		:global(.tc-svg-icon) {
			height: $svg-xs-size;
			width: $svg-xs-size;
			margin-right: $padding-small;
		}
	}

	&.navbar {
		margin-top: 8px;
		margin-bottom: 8px;
		.remove {
			min-height: 2rem;
		}
	}
}

.highlight {
	background-color: $tc-filter-bar-highlight-color;
}

@keyframes reveal {
	0% {
		opacity: 0;
		width: 0;
		overflow: hidden;
	}

	50% {
		opacity: 1;
	}

	100% {
		width: $tc-filter-bar-width;
	}
}

